# src/main/java/fi/metatavu/keycloak/scim/server/AbstractController.java
@@ -1,0 +1,53 @@
+package fi.metatavu.keycloak.scim.server;
+
+import org.keycloak.models.RealmModel;
+
+import java.net.URI;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
+import java.util.Date;
+
+/**
+ * Abstract controller
+ */
+public class AbstractController {
+
+    private final Date createdAt = getDate(2025, 3, 26);
+    private final Date lastModifiedAt = getDate(2025, 3, 27);
+
+    /**
+     * Returns meta object
+     *
+     * @param scimContext SCIM context
+     * @param resourceType resource type
+     * @param resourcePath resource path
+     * @return meta object
+     */
+    protected fi.metatavu.keycloak.scim.server.model.Meta getMeta(
+        ScimContext scimContext,
+        String resourceType,
+        String resourcePath
+    ) {
+        URI baseUri = scimContext.getBaseUri();
+        RealmModel realm = scimContext.getRealm();
+        fi.metatavu.keycloak.scim.server.model.Meta result = new fi.metatavu.keycloak.scim.server.model.Meta();
+        result.setCreated(createdAt);
+        result.setLastModified(lastModifiedAt);
+        result.setResourceType(resourceType);
+        result.setLocation(baseUri.resolve(String.format("/realms/%s/scim/v2/%s", realm.getName(), resourcePath)));
+        return result;
+    }
+
+    /**
+     * Returns date based on year, month and date
+     *
+     * @param year year
+     * @param month month
+     * @param date date
+     * @return date
+     */
+    private Date getDate(int year, int month, int date) {
+        return Date.from(OffsetDateTime.of(year, month, date, 0, 0, 0, 0, ZoneOffset.UTC).toInstant());
+    }
+
+}
