# src/main/java/fi/metatavu/keycloak/scim/server/consts/FilterAttributes.java
@@ -1,15 +1,0 @@
-package fi.metatavu.keycloak.scim.server.consts;
-
-/**
- * Filter attributes
- */
-public class FilterAttributes {
-
-    public static final String USERNAME = "userName";
-    public static final String EMAIL = "email";
-    public static final String FIRST_NAME = "firstName";
-    public static final String LAST_NAME = "lastName";
-    public static final String FAMILY_NAME = "familyName";
-    public static final String ACTIVE = "active";
-
-}
